Hide illegal reflective access warnings in Cypher Shell