@@ -243,6 +243,10 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.neo4j.shell.Main</mainClass>
+                                    <manifestEntries>
+                                        <!-- Hide 'An illegal reflective access...' warnings from org.neo4j.memory.RuntimeInternals -->
+                                        <Add-Opens>java.base/java.lang</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                             <filters>
